[metadata]
name = travis2gha
version = attr:travis2gha.__version__
description = Ad hoc script for converting my Python projects from Travis to GitHub Actions
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = travis2gha@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/travis2gha

keywords =
    github actions
    github api
    repository secrets
    travis

classifiers =
    Development Status :: 7 - Inactive
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License

project_urls =
    Source Code = https://github.com/jwodder/travis2gha
    Bug Tracker = https://github.com/jwodder/travis2gha/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.8
install_requires =
    appdirs    ~= 1.4
    click      ~= 7.0
    Jinja2     ~= 2.8
    pynacl     ~= 1.4
    requests   ~= 2.20
    setuptools >= 46.4.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    travis2gha = travis2gha.__main__:main
